se creo un formulario de usuario, correo y contraseña

--- a/index.html
+++ b/index.html
@@ -25,7 +25,18 @@
     </ol>
     <center><h2>Nuestra sección de ayuda</h2></center>
     <img src="" alt="Gato">
+    <a href="">Gatos</a>
     <br>
     <img src="" alt="Perro">
+    <a href="">Perros</a>
+    
+    <form action="">
+        <label for="">Nombre</label>
+        <input type="text">
+        <label for="">Correo</label>
+        <input type="email">
+        <label for="">Contraseña</label>
+        <input type="password">
+    </form>
 </body>
 </html>
