Se agrego archivo .css

--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Ayuda a un peludo</title>
 </head>
 <body>
     <CENTEr>
-        <h1>ONG - AYUDA A UN PELUDO</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis accusamus rem odio praesentium, eius nobis facere in dolores voluptas laboriosam quasi animi delectus aliquam nihil, officia nulla neque expedita. Velit tempore impedit nam cum quo rerum magnam animi pariatur eum fuga modi nostrum, totam veritatis distinctio dignissimos in adipisci provident!</p>
+        <h1 id="Titulo">ONG - AYUDA A UN PELUDO</h1>
+        <p id="Primer_Parrafo">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Blanditiis accusamus rem odio praesentium, eius nobis facere in dolores voluptas laboriosam quasi animi delectus aliquam nihil, officia nulla neque expedita. Velit tempore impedit nam cum quo rerum magnam animi pariatur eum fuga modi nostrum, totam veritatis distinctio dignissimos in adipisci provident!</p>
         <h2>Nuestros intregantes</h2>
     </CENTEr>
     <ul>
