--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <input type="email">
         <label for="">Contraseña</label>
         <input type="password">
+        <h2>hola</h2>
     </form>
 </body>
 </html>
